Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-5125

SegFault in CompareQueuedItemsByVBAndKey (...) from ep.so

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • 2.0-beta
    • 2.0-beta
    • couchbase-bucket
    • Security Level: Public
    • dp5
      2.0.0r-1139-rel
    • 2

    Description

      While running tests in conf/py-viewlong-failover.conf memcached core's during the document validation stage. Did not save diags from this run but I will attached as soon as it's reproduced. Here's trace from crashed thread.

      warning: no loadable sections found in added symbol-file system-supplied DSO at 0x7fff9ebd1000
      Core was generated by `/opt/couchbase/bin/memcached -X /opt/couchbase/lib/memcached/stdin_term_handler'.
      Program terminated with signal 11, Segmentation fault.
      #0 0x00002aaaaadbf896 in _gnu_cxx::normal_iterator<RCPtr<QueuedItem>, std::vector<RCPtr<QueuedItem>, std::allocator<RCPtr<QueuedItem> > > > std::unguarded_partition<gnu_cxx::normal_iterator<RCPtr<QueuedItem>, std::vector<RCPtr<QueuedItem>, std::allocator<RCPtr<QueuedItem> > > >, RCPtr<QueuedItem>, CompareQueuedItemsByVBAndKey>(gnu_cxx::normal_iterator<RCPtr<QueuedItem>, std::vector<RCPtr<QueuedItem>, std::allocator<RCPtr<QueuedItem> > > >, __gnu_cxx::_normal_iterator<RCPtr<QueuedItem>, std::vector<RCPtr<QueuedItem>, std::allocator<RCPtr<QueuedItem> > > >, RCPtr<QueuedItem>, CompareQueuedItemsByVBAndKey) () from /opt/couchbase/lib/memcached/ep.so
      (gdb) t a a bt

      ...

      Thread 1 (Thread 0x46d34940 (LWP 2753)):
      --Type <return> to continue, or q <return> to quit--
      #0 0x00002aaaaadbf896 in _gnu_cxx::normal_iterator<RCPtr<QueuedItem>, std::vector<RCPtr<QueuedItem>, std::allocator<RCPtr<QueuedItem> > > > std::unguarded_partition<gnu_cxx::normal_iterator<RCPtr<QueuedItem>, std::vector<RCPtr<QueuedItem>, std::allocator<RCPtr<QueuedItem> > > >, RCPtr<QueuedItem>, CompareQueuedItemsByVBAndKey>(gnu_cxx::normal_iterator<RCPtr<QueuedItem>, std::vector<RCPtr<QueuedItem>, std::allocator<RCPtr<QueuedItem> > > >, __gnu_cxx::_normal_iterator<RCPtr<QueuedItem>, std::vector<RCPtr<QueuedItem>, std::allocator<RCPtr<QueuedItem> > > >, RCPtr<QueuedItem>, CompareQueuedItemsByVBAndKey) () from /opt/couchbase/lib/memcached/ep.so
      #1 0x00002aaaaadbfa9a in void std::_introsort_loop<gnu_cxx::normal_iterator<RCPtr<QueuedItem>, std::vector<RCPtr<QueuedItem>, std::allocator<RCPtr<QueuedItem> > > >, long, CompareQueuedItemsByVBAndKey>(gnu_cxx::normal_iterator<RCPtr<QueuedItem>, std::vector<RCPtr<QueuedItem>, std::allocator<RCPtr<QueuedItem> > > >, __gnu_cxx::_normal_iterator<RCPtr<QueuedItem>*, std::vector<RCPtr<QueuedItem>, std::allocator<RCPtr<QueuedItem> > > >, long, CompareQueuedItemsByVBAndKey) ()
      from /opt/couchbase/lib/memcached/ep.so
      #2 0x00002aaaaadc4d9c in sort<_gnu_cxx::_normal_iterator<RCPtr<QueuedItem>*, std::vector<RCPtr<QueuedItem>, std::allocator<RCPtr<QueuedItem> > > >, CompareQueuedItemsByVBAndKey> (this=<value optimized out>, items=std::vector of length 417088, capacity 524288 =

      {...})
      at /usr/lib/gcc/x86_64-redhat-linux6E/4.4.6/../../../../include/c++/4.4.6/bits/stl_algo.h:5258
      #3 CouchKVStore::optimizeWrites (this=<value optimized out>, items=std::vector of length 417088, capacity 524288 = {...}

      ) at couch-kvstore/couch-kvstore.cc:671
      #4 0x00002aaaaad305e4 in EventuallyPersistentStore::pushToOutgoingQueue (this=0x7d0a000) at ep.cc:1887
      #5 0x00002aaaaad3d25b in EventuallyPersistentStore::beginFlush (this=0x7d0a000) at ep.cc:1867
      #6 0x00002aaaaad656cf in Flusher::doFlush (this=0x7d08120) at flusher.cc:232
      #7 0x00002aaaaad661d5 in Flusher::step (this=0x7d08120, d=..., tid=std::tr1::shared_ptr (count 5) 0x7cee500) at flusher.cc:158
      #8 0x00002aaaaad66850 in FlusherStepper::callback (this=<value optimized out>, d=<value optimized out>, t=<value optimized out>) at flusher.cc:23
      #9 0x00002aaaaad2ea6f in Task::run(Dispatcher&, std::tr1::shared_ptr<Task>) () from /opt/couchbase/lib/memcached/ep.so
      #10 0x00002aaaaad2d920 in Dispatcher::run (this=0x7cd0c40) at dispatcher.cc:123
      #11 0x00002aaaaad2e1ab in launch_dispatcher_thread (arg=0x7cd0c40) at dispatcher.cc:28
      #12 0x00002b6611dae73d in start_thread () from /lib64/libpthread.so.0
      #13 0x00002b66120974bd in clone () from /lib64/libc.so.6

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jin Jin Lim (Inactive)
            tommie Tommie McAfee (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty