couch-kvstore/couch-kvstore.cc
@@ -118,11 +118,6 @@ static uint32_t computeMaxDeletedSeqNum(DocInfo **docinfos, const int numdocs)
     return max;
 }
 
-static bool compareItemsByKey(const queued_item &i1, const queued_item &i2)
-{
-    return i1->getKey() == i2->getKey();
-}
-
 struct StatResponseCtx {
 public:
     StatResponseCtx(std::map<std::pair<uint16_t, uint16_t>, vbucket_state> &sm,
@@ -660,18 +655,6 @@ void CouchKVStore::addStat(const std::string &prefix, const char *stat, T &val,
     std::stringstream fullstat;
     fullstat << prefix << ":" << stat;
     add_casted_stat(fullstat.str().c_str(), val, add_stat, c);
-}
-
-void CouchKVStore::optimizeWrites(std::vector<queued_item> &items)
-{
-    if (items.empty()) {
-        return;
-    }
-    CompareQueuedItemsByVBAndKey cq;
-    std::sort(items.begin(), items.end(), cq);
-    std::vector<queued_item>::iterator itr;
-    itr = std::unique(items.begin(), items.end(), compareItemsByKey);
-    items.resize(itr - items.begin());
 }
 
 void CouchKVStore::loadDB(shared_ptr<LoadCallback> cb, bool keysOnly,
